# nspanel_server

./: Cargo.toml  LICENSE  README.md
config/: config.yaml  connectivity.yaml  icons.yaml
src/: cards.rs  command.rs  main.rs  mqttc.rs  pages.rs  utils.rs
src/config/: schema.rs
src/homeassitant/: events.rs  hass.rs  mod.rs
src/mqttc/: mod.rs
src/mqttc/model/: alarm.rs  mod.rs  screensaver.rs
src/watcher/: mod.rs  notify.rs
