[package]
name = "nspanel_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "^2.11.4"
lazy_static = "^1.5.0"
notify = "^8.2.0"
serde_yaml = "^0.9.34"
fern = "^0.7.1"
log = "^0.4.28"


serde = { version = "^1.0.228", features = ["derive"] }
regex = { version = "^1.11.3", features = [] }

rumqttc = "^0.25.0"
async-std = "^1.13.0"
tokio = { version = "^1.47.1", features= ["rt-multi-thread", "sync"] }
futures = "^0.3.31"
serde_json = "^1.0.145"
bytes = { version = "^1.10.1", features = [] }

chrono = "0.4.42"
chrono-tz = "^0.10.4"
tokio-tungstenite = "^0.28.0"
async-tungstenite = "^0.31.0"
tokio-native-tls = { version = "^0.3.1", optional = true }
url = "^2.5.7"

